# sketch2fig

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: BUILD_STEPS.md  COMPILER.md  PROJECT_PLAN.md  PROMPTS.md  SETUP.md  TESTING.md  configuration.md  development.md  roadmap.md  troubleshooting.md
examples/: README.md  deviation_bound.py  evaluate.py
src/img2tikz/: __init__.py
src/img2tikz/cli/: __init__.py  main.py
src/img2tikz/core/: __init__.py  llm.py  pipeline.py  render.py  report.py
src/optikz/: __init__.py
src/optikz/cli/: main.py
src/optikz/core/: llm.py  pipeline.py  render.py  report.py
src/optikz_backend/: __init__.py
src/optikz_backend/cli/: __init__.py  main.py
src/optikz_backend/core/: __init__.py  report.py
src/sketch2fig/: cli.py  compiler.py  config.py  evaluator.py  generator.py  orchestrator.py  planner.py  prompts.py
templates/: preamble_default.tex
tests/: __init__.py  conftest.py  test_cli.py  test_compiler.py  test_pipeline.py  test_pipeline_smoke.py  test_render.py  test_report.py
tests/fixtures/real_examples/: 1_cover_image.tex  2_architecture.tex  3_deviation.tex  4_schedule.tex
tests/fixtures/simple_pipeline/: reference.tex
