[project]
name = "sketch2fig"
version = "0.1.0"
description = "Agentic tool that converts screenshots/sketches of figures into publication-quality TikZ code"
requires-python = ">=3.12"
dependencies = [
    "anthropic",
    "typer",
    "pillow",
    "pydantic-settings",
]

[project.scripts]
sketch2fig = "sketch2fig.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sketch2fig"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests that render images (deselect with '-m \"not slow\"')",
    "integration: marks tests that call LLM APIs (deselect with '-m \"not integration\"')",
]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
    "numpy",
]
